--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Cordia_Sasad_eDM_650x1000_work</title>
+<title>Cordia Sasad</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <!--[if !mso]><!-- -->
@@ -85,7 +85,7 @@
 	<tr>
 		<td>
 			<img src="images/arrow.jpg" width="30" height="30" alt=""></td>
-		<td colspan="2" padding-left="5px" width="143" height="30" style="text-decoration:none; color:#95c11e; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: bold;line-height:16px"><a style="text-decoration:none; color:#95c11e; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: bold;line-height:16px" href="">&nbsp;&nbsp;SZERETNÉK<br>&nbsp;&nbsp;TÖBBET MEGTUDNI</a></td>
+		<td colspan="2" width="143" height="30" style="text-decoration:none; color:#95c11e; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: bold;line-height:16px"><a style="text-decoration:none; color:#95c11e; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: bold;line-height:16px" href="">&nbsp;&nbsp;SZERETNÉK<br>&nbsp;&nbsp;TÖBBET MEGTUDNI</a></td>
 		<td colspan="7" width="367" height="30" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
