--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	</tr>
 	<tr>
 		<td rowspan="23" width="30" height="969" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
-		<td colspan="10">
-			<img src="images/header.jpg" width="540" height="340" alt=""></td>
+		<td colspan="10"><a href="http://cordia.hu/projektek/sasad-resort">
+			<img src="images/header.jpg" width="540" height="340" alt=""></a></td>
 		<td rowspan="23" width="30" height="969" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
@@ -46,23 +46,23 @@
 	</tr>
 	<tr>
 		<td width="30" height="125" bgcolor="#ededed" style="font-size:1px; line-height:1px;">&nbsp;</td>
-		<td>
-			<img src="images/spot0.jpg" width="125" height="125" alt=""></td>
+		<td><a href="http://cordia.hu/projektek/sasad-resort">
+			<img src="images/spot0.jpg" width="125" height="125" alt=""></a></td>
 		<td colspan="3" width="52" height="125" bgcolor="#ededed" style="font-size:1px; line-height:1px;">&nbsp;</td>
-		<td>
-			<img src="images/spot1.jpg" width="125" height="125" alt=""></td>
+		<td><a href="http://cordia.hu/projektek/sasad-resort">
+			<img src="images/spot1.jpg" width="125" height="125" alt=""></a></td>
 		<td colspan="2" width="53" height="125" bgcolor="#ededed" style="font-size:1px; line-height:1px;">&nbsp;</td>
-		<td>
-			<img src="images/spot2.jpg" width="125" height="125" alt=""></td>
+		<td><a href="http://cordia.hu/projektek/sasad-resort">
+			<img src="images/spot2.jpg" width="125" height="125" alt=""></a></td>
 		<td width="30" height="125" bgcolor="#ededed" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
 		<td colspan="10" width="540" height="6" bgcolor="#ededed" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
-		<td colspan="4" valign="top" bgcolor="#ededed" width="180" height="35" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 12px; font-weight: bold;line-height:14px; text-align: center">Újbuda legzöldebb<br>részén</td>
-		<td colspan="3" valign="top" bgcolor="#ededed" width="180" height="35" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 12px; font-weight: bold;line-height:14px; text-align: center">Saját 8000 m2-es<br>élménypark</td>
-		<td colspan="3" valign="top" bgcolor="#ededed" width="180" height="35" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 12px; font-weight: bold;line-height:14px; text-align: center">10 percre a 4-es<br>metrótól </td>
+		<td colspan="4" valign="top" bgcolor="#ededed" width="180" height="35" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 12px; font-weight: bold;line-height:14px; text-align: center"><a style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 12px; font-weight: bold;line-height:14px;" href="http://cordia.hu/projektek/sasad-resort">Újbuda legzöldebb<br>részén</a></td>
+		<td colspan="3" valign="top" bgcolor="#ededed" width="180" height="35" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 12px; font-weight: bold;line-height:14px; text-align: center"><a style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 12px; font-weight: bold;line-height:14px;" href="http://cordia.hu/projektek/sasad-resort">Saját 8000 m2-es<br>élménypark</a></td>
+		<td colspan="3" valign="top" bgcolor="#ededed" width="180" height="35" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 12px; font-weight: bold;line-height:14px; text-align: center"><a style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 12px; font-weight: bold;line-height:14px;" href="http://cordia.hu/projektek/sasad-resort">10 percre a 4-es<br>metrótól</a></td>
 	</tr>
 	<tr>
 		<td colspan="10" width="540" height="7" bgcolor="#ededed" style="font-size:1px; line-height:1px;">&nbsp;</td>
@@ -83,9 +83,9 @@
 		<td colspan="10" width="540" height="18" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
-		<td>
-			<img src="images/arrow.jpg" width="30" height="30" alt=""></td>
-		<td colspan="2" width="143" height="30" style="text-decoration:none; color:#95c11e; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: bold;line-height:16px"><a style="text-decoration:none; color:#95c11e; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: bold;line-height:16px" href="">&nbsp;&nbsp;SZERETNÉK<br>&nbsp;&nbsp;TÖBBET MEGTUDNI</a></td>
+		<td><a href="http://cordia.hu/rolunk">
+			<img src="images/arrow.jpg" width="30" height="30" alt=""></a></td>
+		<td colspan="2" width="143" height="30" style="text-decoration:none; color:#95c11e; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: bold;line-height:16px"><a style="text-decoration:none; color:#95c11e; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: bold;line-height:16px" href="http://cordia.hu/rolunk">&nbsp;&nbsp;SZERETNÉK<br>&nbsp;&nbsp;TÖBBET MEGTUDNI</a></td>
 		<td colspan="7" width="367" height="30" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
