--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	<tr>
 		<td rowspan="23" width="30" height="969" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 		<td colspan="10">
-			<img src="images/header.jpg" width="540" height="340" alt=""></td>
+			<a href="http://cordia.hu/projektek/sasad-resort/" target="_blank">
+			<img src="images/header.jpg" width="540" height="340" alt=""></a></td>
 		<td rowspan="23" width="30" height="969" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
@@ -47,13 +48,16 @@
 	<tr>
 		<td width="30" height="125" bgcolor="#ededed" style="font-size:1px; line-height:1px;">&nbsp;</td>
 		<td>
-			<img src="images/spot0.jpg" width="125" height="125" alt=""></td>
+			<a href="http://cordia.hu/projektek/sasad-resort/" target="_blank">
+			<img src="images/spot0.jpg" width="125" height="125" alt=""></a></td>
 		<td colspan="3" width="52" height="125" bgcolor="#ededed" style="font-size:1px; line-height:1px;">&nbsp;</td>
 		<td>
-			<img src="images/spot1.jpg" width="125" height="125" alt=""></td>
+			<a href="http://cordia.hu/projektek/sasad-resort/" target="_blank">
+			<img src="images/spot1.jpg" width="125" height="125" alt=""></a></td>
 		<td colspan="2" width="53" height="125" bgcolor="#ededed" style="font-size:1px; line-height:1px;">&nbsp;</td>
 		<td>
-			<img src="images/spot2.jpg" width="125" height="125" alt=""></td>
+			<a href="http://cordia.hu/projektek/sasad-resort/" target="_blank">
+			<img src="images/spot2.jpg" width="125" height="125" alt=""></a></td>
 		<td width="30" height="125" bgcolor="#ededed" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
@@ -85,7 +89,7 @@
 	<tr>
 		<td>
 			<img src="images/arrow.jpg" width="30" height="30" alt=""></td>
-		<td colspan="2" width="143" height="30" style="text-decoration:none; color:#95c11e; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: bold;line-height:16px"><a style="text-decoration:none; color:#95c11e; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: bold;line-height:16px" href="">&nbsp;&nbsp;SZERETNÉK<br>&nbsp;&nbsp;TÖBBET MEGTUDNI</a></td>
+		<td colspan="2" width="143" height="30" style="text-decoration:none; color:#95c11e; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: bold;line-height:16px"><a style="text-decoration:none; color:#95c11e; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: bold;line-height:16px" href="http://cordia.hu/projektek/sasad-resort/" target="_blank">&nbsp;&nbsp;SZERETNÉK<br>&nbsp;&nbsp;TÖBBET MEGTUDNI</a></td>
 		<td colspan="7" width="367" height="30" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
