--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 		<td colspan="10" width="540" height="26" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
-		<td colspan="10" width="540" height="20" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 16px; font-weight: bold;line-height:12px">Kedves John Smith!</td>
+		<td colspan="10" width="540" height="20" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 16px; font-weight: bold;line-height:12px"><a style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 16px; font-weight: bold;line-height:17px; text-decoration: none;" target="_blank" href="http://cordia.hu/projektek/sasad-resort">Kedves John Smith!</a></td>
 	</tr>
 	<tr>
 		<td colspan="10" width="540" height="11" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
-		<td colspan="10" width="540" height="61" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: normal;line-height:17px">Az otthon az a hely, ahol együtt a család. Ahol mindenkinek van egy kedvenc sarka. Ahol ki lehet kapcsolni a napi stressz után. Friss levegő, természet közeli környezet és harmónia.</td>
+		<td colspan="10" width="540" height="61" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: normal;line-height:17px"><a style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: normal;line-height:17px; text-decoration: none;" target="_blank" href="http://cordia.hu/projektek/sasad-resort">Az otthon az a hely, ahol együtt a család. Ahol mindenkinek van egy kedvenc sarka. Ahol ki lehet kapcsolni a napi stressz után. Friss levegő, természet közeli környezet és harmónia.</a></td>
 	</tr>
 	<tr>
 		<td colspan="10" width="540" height="9" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
-		<td colspan="10" width="540" height="43" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: normal;line-height:17px">Ha ilyen otthont szeretne, van egy jó hírünk, Budapest egyik legkeresettebb lakóparkja új ütemmel bővül. Elindult a Sasad Resort 4 lakásainak értékesítése.</td>
+		<td colspan="10" width="540" height="43" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: normal;line-height:17px"><a style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: normal;line-height:17px; text-decoration: none;" target="_blank" href="http://cordia.hu/projektek/sasad-resort">Ha ilyen otthont szeretne, van egy jó hírünk, Budapest egyik legkeresettebb lakóparkja új ütemmel bővül. Elindult a Sasad Resort 4 lakásainak értékesítése.</a></td>
 	</tr>
 	<tr>
 		<td colspan="10" width="540" height="20" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
@@ -75,13 +75,13 @@
 		<td colspan="10" width="540" height="25" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
-		<td colspan="10" width="540" height="38" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: normal;line-height:14px;">A Cordia az elmúlt 15 évben 3500 lakást adott át a régió 3 országában. Jól működő kapcsolatunk van számos kivitelező vállalattal és finanszírozó bankokkal is.</td>
+		<td colspan="10" width="540" height="38" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: normal;line-height:14px;"><a style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: normal;line-height:17px; text-decoration: none;" target="_blank" href="http://cordia.hu/projektek/sasad-resort">A Cordia az elmúlt 15 évben 3500 lakást adott át a régió 3 országában. Jól működő kapcsolatunk van számos kivitelező vállalattal és finanszírozó bankokkal is.</a></td>
 	</tr>
 	<tr>
 		<td colspan="10" width="540" height="12" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
-		<td colspan="10" width="540" height="41" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: normal;line-height:14px;">Válasszon az elsők között Újbuda legzöldebb lakóparkjának értékálló, új otthonai közül! Személyes ajánlatért regisztrájon most!</td>
+		<td colspan="10" width="540" height="41" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: normal;line-height:14px;"><a style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 14px; font-weight: normal;line-height:17px; text-decoration: none;" target="_blank" href="http://cordia.hu/projektek/sasad-resort">Válasszon az elsők között Újbuda legzöldebb lakóparkjának értékálló, új otthonai közül! Személyes ajánlatért regisztrájon most!</a></td>
 	</tr>
 	<tr>
 		<td colspan="10" width="540" height="18" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
