--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		<td colspan="10" width="540" height="16" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
-		<td colspan="10" valign="top" align="center" width="540" height="37" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 9px; font-weight: normal; line-height:8px text-align:center;">A levélben szereplő tartalom nem minősül ajánlattételnek. Sasad Resort projektünkkel kapcsolatos személyre szabott<br>ajánlatért kérjük, keresse munkatársainkat az <a style="color:#008dcf; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 9px; font-weight: normal; line-height:8px text-align:center;" href="mailto:ertekesites@cordia.hu">ertekesites@cordia.hu</a> email címen vagy a +36 1 411 3000-es telefonszámon.</td>
+		<td colspan="10" valign="top" align="center" width="540" height="37" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 9px; font-weight: normal; line-height:8px text-align:center;">A levélben szereplő tartalom nem minősül ajánlattételnek. Sasad Resort projektünkkel kapcsolatos személyre szabott<br>ajánlatért kérjük, keresse munkatársainkat az <span style="color:#008dcf; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 9px; font-weight: normal; line-height:8px text-align:center;" >ertekesites@cordia.hu</span> email címen vagy a +36 1 411 3000-es telefonszámon.</td>
 	</tr>
 	<tr>
 		<td>
