--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <!-- Save for Web Slices (Cordia_Sasad_eDM_650x1000_work.psd) -->
-<table align="center" bgcolor="#ffffff" id="Table_01" width="600" height="1000" border="0" cellpadding="0" cellspacing="0">
+<table align="center" bgcolor="#ffffff" id="Table_01" width="600" height="954" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td colspan="12" width="600" height="30" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
-		<td rowspan="23" width="30" height="969" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
+		<td rowspan="23" width="30" height="923" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 		<td colspan="10">
 			<a href="http://cordia.hu/projektek/sasad-resort/" target="_blank">
 			<img src="images/header.jpg" width="540" height="340" alt=""></a></td>
-		<td rowspan="23" width="30" height="969" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
+		<td rowspan="23" width="30" height="923" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
-		<td colspan="10" width="540" height="26" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
+		<td colspan="10" width="540" height="0" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
 	</tr>
 	<tr>
-		<td colspan="10" width="540" height="20" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 16px; font-weight: bold;line-height:12px"><a style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 16px; font-weight: bold;line-height:17px; text-decoration: none;" target="_blank" href="http://cordia.hu/projektek/sasad-resort">Kedves John Smith!</a></td>
+		<td colspan="10" width="540" height="0" style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 16px; font-weight: bold;line-height:12px"><a style="color:#484848; font-family: 'Open Sans', Arial, Verdana, sans-serif; font-size: 16px; font-weight: bold;line-height:17px; text-decoration: none;" target="_blank" href="http://cordia.hu/projektek/sasad-resort"></a></td>
 	</tr>
 	<tr>
 		<td colspan="10" width="540" height="11" bgcolor="#ffffff" style="font-size:1px; line-height:1px;">&nbsp;</td>
